<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/sessionListFragment">

    <fragment android:id="@+id/settingsFragment" android:name="com.nezumi_ai.presentation.ui.fragment.SettingsComposeFragment" android:label="@string/action_settings" tools:layout="@layout/fragment_settings">
        <action android:id="@+id/action_settingsFragment_to_licenseFragment" app:destination="@id/licenseFragment" />
    </fragment>

    <fragment android:id="@+id/sessionListFragment" android:name="com.nezumi_ai.presentation.ui.fragment.SessionListFragment" android:label="@string/app_title_sessions" tools:layout="@layout/fragment_session_list">

        <action android:id="@+id/action_sessionListFragment_to_chatFragment" app:destination="@id/chatFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@+id/action_sessionListFragment_to_settingsFragment" app:destination="@id/settingsFragment" />
    </fragment>


    <fragment android:id="@+id/licenseFragment" android:name="com.nezumi_ai.presentation.ui.fragment.LicenseFragment" android:label="@string/license_title" tools:layout="@layout/fragment_license" />

    <fragment android:id="@+id/chatFragment" android:name="com.nezumi_ai.presentation.ui.fragment.ChatFragment" android:label="Chat" tools:layout="@layout/fragment_chat">

        <argument android:name="sessionId" app:argType="long" android:defaultValue="-1L" />

        <action android:id="@+id/action_chatFragment_to_sessionListFragment" app:destination="@id/sessionListFragment" app:popUpTo="@id/sessionListFragment" app:popUpToInclusive="false" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment android:id="@+id/modelSettingsFragment" android:name="com.nezumi_ai.presentation.ui.fragment.ModelSettingsFragment" android:label="@string/model_settings" tools:layout="@layout/fragment_settings">
        <action android:id="@+id/action_modelSettingsFragment_to_licenseFragment" app:destination="@id/licenseFragment" />
    </fragment>

    <fragment android:id="@+id/toolsSettingsFragment" android:name="com.nezumi_ai.presentation.ui.fragment.ToolsSettingsFragment" android:label="@string/tools_settings" tools:layout="@layout/fragment_settings" />

</navigation>
